fix: text wrap in messages

--- a/client/src/components/messages/MessageItem/index.module.css
+++ b/client/src/components/messages/MessageItem/index.module.css
@@ -2,8 +2,7 @@
   display: flex;
   align-items: end;
   gap: 9px;
-  width: max-content;
-  white-space: pre-wrap;
+  max-width: 100%;
 }
 
 .sent {
@@ -37,14 +36,19 @@
   height: 100%;
   object-fit: cover;
 }
+
 .messageBody {
   background: #aaa1a1;
   padding: 12px 16px;
   border-radius: 12px 12px 0 12px;
-  min-width: 150px;
   font-size: 16px;
   margin-top: 12px;
   margin-bottom: 16px;
+  width: 100%;
+  max-width: 500px;
+  word-wrap: break-word;
+  overflow: hidden;
+  white-space: pre-wrap;
 }
 
 .received .messageBody {
